Revert back the change for scrolling frozen columns. The problem is fixed in existing code when remove preventDefault, which break the code in certain situations. Making better calculations

--- a/css/ui.jqgrid-bootstrap.css
+++ b/css/ui.jqgrid-bootstrap.css
@@ -872,13 +872,6 @@ ul.ui-search-menu li, ul.ui-nav-menu li {
 .frozen-div, .frozen-bdiv {
 	background-color: #fff;
 }
-.frozen-bdiv {
-   pointer-events: none;
-}
-.frozen-bdiv  input[id^="jqs_"], 
-.frozen-bdiv  div.jqgrid_actions {
-   pointer-events: auto;
-}
 
 /*
 .ui-jqgrid .ui-jqgrid-caption,
