--- a/css/ui.jqgrid.css
+++ b/css/ui.jqgrid.css
@@ -574,10 +574,3 @@ td.menu_text {
 	overflow: auto;
 	height: 17em;
 }
-.frozen-bdiv {
-   pointer-events: none;
-}
-.frozen-bdiv  input[id^="jqs_"], 
-.frozen-bdiv  div.jqgrid_actions {
-   pointer-events: auto;
-}
